--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@
 ###> configuration/database ###
 POSTGRES_USER=root
 POSTGRES_PASSWORD=root
-POSTGRES_DB=techni-elec
+POSTGRES_DB=techni-elec-website
 ###< configuration/database ###
 
 ###> configuration/database-manager ###
@@ -49,4 +49,17 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 MAILER_DSN=smtp://mailpit:1025
+MAIL_NO_REPLY=no-reply@dev.com
 ###< symfony/mailer ###
+
+###> google/recaptcha ###
+# To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
+# https://www.google.com/recaptcha/admin
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET=
+###< google/recaptcha ###
+
+###> excelwebzone/recaptcha-bundle ###
+EWZ_RECAPTCHA_SITE_KEY=
+EWZ_RECAPTCHA_SECRET=
+###< excelwebzone/recaptcha-bundle ###
