--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@tailwindcss/postcss": "^4.1.12",
+        "file-loader": "^6.0.0",
         "postcss": "^8.5.6",
         "postcss-loader": "^8.1.1",
         "tailwindcss": "^4.1.12",
