--- a/.env
+++ b/.env
@@ -25,6 +25,10 @@ PGADMIN_DEFAULT_EMAIL=admin@dev.com
 PGADMIN_DEFAULT_PASSWORD=admin
 ###< configuration/database-manager ###
 
+###> configuration/mailer ###
+MAILER_ADDRESS_EMAIL=no-reply@dev.com
+###< configuration/mailer ###
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=
@@ -49,17 +53,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 MAILER_DSN=smtp://mailpit:1025
-MAIL_NO_REPLY=no-reply@dev.com
 ###< symfony/mailer ###
 
-###> google/recaptcha ###
-# To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
-# https://www.google.com/recaptcha/admin
-GOOGLE_RECAPTCHA_SITE_KEY=
-GOOGLE_RECAPTCHA_SECRET=
-###< google/recaptcha ###
-
-###> excelwebzone/recaptcha-bundle ###
-EWZ_RECAPTCHA_SITE_KEY=
-EWZ_RECAPTCHA_SECRET=
-###< excelwebzone/recaptcha-bundle ###
+###> karser/karser-recaptcha3-bundle ###
+# Get your API key and secret from https://g.co/recaptcha/v3
+RECAPTCHA3_KEY=
+RECAPTCHA3_SECRET=
+###< karser/karser-recaptcha3-bundle ###
