--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,6 @@
 twig:
     globals:
-        recaptcha_site_key: '%env(GOOGLE_RECAPTCHA_SITE_KEY)%'
+        site_name: 'Techni-Elec'
     file_name_pattern: '*.twig'
     form_themes: ['layout.html.twig']
 
