--- a/.env
+++ b/.env
@@ -14,6 +14,10 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+##> configuration/global ###
+SITE_NAME=Techni-Elec
+###< configuration/global ###
+
 ###> configuration/database ###
 POSTGRES_USER=root
 POSTGRES_PASSWORD=root
