--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,5 +18,9 @@ services:
     App\:
         resource: '../src/'
 
+    App\Service\FileService:
+        arguments:
+            $privateUploadsDir: '%private_uploads_dir%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
